# mini-games

./: CMakeLists.txt  README.md  game.cpp  game.h  header.h  main.cpp  record.cpp  sudoku.cpp  sudoku.h  sudoku1.cpp  sudoku1.h  sudokuTable.cpp  sudokuTable.h  todolist.txt
games/: sudoku.cpp  sudoku.h
games/sudoku/: classicSudoku.cpp  classicSudoku.h  multidoku.cpp  multidoku.h  sudoku.cpp  sudoku.h
useless/: record.cpp  sudoku1.h
